--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
               <p>
               </p>
               <ul class="work__list">
-                <li>Linux RedHat / Ubuntu / Debian</li>
-                <li>Windows Server 2019 / 2016 / 2012  </li>
-                <li>Windows 11 / 10 </li>
+                <li>Linux RedHat / Ubuntu / Debian / ...</li>
+                <li>Windows Server 2019 / 2016 / 2012 / ...  </li>
+                <li>Windows 11 / 10 / ...</li>
               </ul>
             </div>
           </div>
@@ -95,9 +95,9 @@
             <div class="work__text">
               <h3>Réseaux</h3>
               <ul class="work__list">
-                <li>Reseau LAN / WAN / VPN (IPsec & SSL)</li>
+                <li>Réseaux LAN / WAN / MPLS / VPN (IPsec & SSL)</li>
                 <li>Switch HP (VLAN, STP, BGP, 802.1q)</li>
-                <li>Wifi Extreme Networks</li>
+                <li>Wifi Extreme Networks (ex Aerohive)</li>
                 <li>Cisco (base)</li>
               </ul>
             </div>
@@ -107,13 +107,13 @@
             <div class="work__text">
               <h3>Services réseaux</h3>
               <ul class="work__list">
-                <li>Serveurs DNS (resolveur / autorité / conditionnel)</li>
-                <li>Service DHCP & NTP</li>
-                <li>Serveur de messagerie (Postfix, Qmail, IBM Domino...)</li>
-                <li>Sereur Reverse Proxy (Citrix Netscaler / ADC, Azure Application Gateway, Azure Front Door)</li>
-                <li>Sereur web (Apache, Nginx, Microsoft IIS)</li>
-                <li>Sereur Proxy (Squid, Squiguard, Websense...)</li>
-                <li>Sereur Active Directory / Certificate Service / Radius</li>
+                <li>Serveurs DNS (résolveur / autorité / conditionnel)</li>
+                <li>Serveurs DHCP & NTP</li>
+                <li>Serveurs de messagerie (Postfix, Qmail, IBM Domino...)</li>
+                <li>Serveurs Reverse Proxy (Citrix Netscaler / ADC, Azure Application Gateway, Azure Front Door)</li>
+                <li>Serveurs web (Apache, Nginx, Microsoft IIS...)</li>
+                <li>Serveurs Proxy (Squid, Squiguard, Websense...)</li>
+                <li>Serveurs Active Directory / Certificate Service / Radius</li>
               </ul>
             </div>
           </div>
@@ -135,8 +135,8 @@
               <h3>Certificats et PKI</h3>
               <ul class="work__list">
                 <li>Deploiement d'Autorité de Certificat interne (Microsoft AD CS)</li>
-                <li>Gestion de certificat issue d'autorité public</li>
-                <li>Accompagnement des équipes interne pour la génération, l'installation, le debuggage des certificat x509</li>
+                <li>Gestion de certificat issue d'autorité public (Sectigi, DigiCert, GoDaddy ...)</li>
+                <li>Accompagnement des équipes interne pour la génération, l'installation, le debuggage des certificats</li>
               </ul>
             </div>
           </div>
@@ -156,7 +156,8 @@
               <h3>Technologies Cloud</h3>
               <ul class="work__list">
                 <li>Microsoft Azure</li>
-                <li>Automatisation : Ansible, Terraform</li>
+                <li>VM, VNet, Bastion, Storage account, Logic App, App Gateway, API Services, DNS, ...</li>
+                <li>Infrastructure As Code : Terraform, Ansible</li>
               </ul>
             </div>
           </div>
@@ -165,11 +166,11 @@
             <div class="work__text">
               <h3>Virtualisation et conteneurisation</h3>
               <ul class="work__list">
-                <li>Utilisateur de solution VMWare ESX, VirtualBox</li>
+                <li>Utilisateur des solutions VMWare ESX, VirtualBox</li>
                 <li>Docker & Docker Swarm</li>
-                <li>Base de Kubernetes et KVM</li>
+                <li>Bases de Kubernetes et KVM</li>
               </ul>
-
+            <!--
               <div class="work__links">
                 <a href="#" class="link__text">
                   Visit Site <span>&rarr;</span>
@@ -178,6 +179,7 @@
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
+            -->
             </div>
             <div class="work__image-box">
               <img src="./images/project-3.png" class="work__image" alt="Project 3" />
