--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="exp__text">
               <h3>Lectra (3000 personnes), Cestas (33) - 34 filiales dans le monde - </h3>
               <p>
-                Depuis 2007 - Ingénieur réseau et sécurité
+                <H2>Depuis 2007 - Ingénieur réseau et sécurité</H2>
               </p>
               <ul class="exp__list">
                 <li>Concevoir et déployer les infrastructures réseaux pour les salles serveurs et l'infrastructure cloud</li>
@@ -217,7 +217,7 @@
             <div class="work__text">
               <h3>Messier-Bugatti groupe SAFRAN (1500 personnes), Vélizy (78)</h3>
               <p>
-                Consultant sécurité INTRINsec
+                <H2>2003-2007 - Consultant sécurité INTRINsec</H2>
               </p>
               <ul class="work__list">
                 <li>Projet de prise en charge de l'infogérance sécurité – méthodologie ITIL</li>
@@ -234,7 +234,7 @@
             <div class="work__text">
               <h3>2002 – 2003 - INTRINsec groupe Neurones (1300 personnes), Nanterre (92)</h3>
               <p>
-                Expert sécurité INTRINsec
+                <H2>2002-2003 - Expert sécurité INTRINsec</H2>
               </p>
               <ul class="work__list">
                 <li>Veille technologique et sécurité</li>
