--- a/index.html
+++ b/index.html
@@ -272,10 +272,9 @@
       <h2>Certifications</h2>
       <div class="exp__boxes">
 
-        <!-- Each div with the work__box class is a project. -->
-
         <div class="exp__box">
           <div class="exp__text">
+            <h3>Certifications Microsoft / Azure</h3>
             <ul class="exp__list">
               <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/E123B4A68AA3A968?sharingId=10F2570FA8049AD5">SC-100</a> - Cybersecurity Architect Expert - 12/2022</li>
               <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/1721301A4A0EA28A?sharingId=10F2570FA8049AD5">AZ-500</a> - Azure Security Engineer Associate - 01/2024</li>
@@ -284,13 +283,30 @@
               <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/24AD45DECDC0AB25?sharingId=10F2570FA8049AD5">AZ-104</a> - Azure Administrator Associate - 06/2023</li>
               <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/D0167E8BAD251CEE?sharingId=10F2570FA8049AD5">SC-900</a> - Security, Compliance, and Identity Fundamentals - 06/2022</li>
               <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/8B25DFBA2E597C7D?sharingId=10F2570FA8049AD5">AZ-900</a> - Azure Fundamentals - 06/2022 </li>
-              <li><a href="https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url">Fortinet FCA</a> - Fortinet Certified Associate Cybersecurity - 09/2024</li>
-              <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">Fortinet FCF</a> - Fortinet Certified Fundamentals Cybersecurity - 09/2024 - </li>
-              <li><a href="https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url">Aviatrix ACE</a> - Multicloud Network Operations Specialty - 03/2024 </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="work__box">
+          <div class="work__text">
+            <h3>Management de la sécurité</h3>
+            <ul class="work__list">
               <li>ISO 27001:2013 - Lead Auditor - 06/2017 </li>
             </ul>
           </div>
         </div>
+
+        <div class="work__box">
+          <div class="work__text">
+            <h3>Certifications sécurité, réseaux</h3>
+            <ul class="work__list">
+              <li><a href="https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url">Fortinet FCA</a> - Fortinet Certified Associate Cybersecurity - 09/2024</li>
+              <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">Fortinet FCF</a> - Fortinet Certified Fundamentals Cybersecurity - 09/2024 - </li>
+              <li><a href="https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url">Aviatrix ACE</a> - Multicloud Network Operations Specialty - 03/2024 </li>
+            </ul>
+          </div>
+        </div>
+
         <div class="work__box">
           <div class="work__text">
             <h3>Microsoft Applied Skills - Microsoft</h3>
@@ -304,27 +320,12 @@
             </ul>
           </div>
         </div>
-        <div class="work__box">
-          <div class="work__text">
-            <h3>2002 – 2003 - INTRINsec groupe Neurones (1300 personnes), Nanterre (92)</h3>
-            <p>
-              <H1>2002-2003 - Expert sécurité INTRINsec</H1>
-            </p>
-            <ul class="work__list">
-              <li>Veille technologique et sécurité</li>
-              <li>Audit et déploiement d’architectures sécurisées (serveur de messagerie / pare-feu / Internet / proxy / antivirus)</li>
-              <li>Audit et intégration d'architecture antivirale</li>
-              <li>Infogérance de la sécurité (support et assistance clients)</li>
-              <li>Administration système et réseau</li>
-            </ul>
-        </div>
-      </div>
     </div>
   </section>
 
 
 
-
+<!--
     <section class="work" id="work">
       <div class="work__box">
         <div class="work__text">
@@ -361,7 +362,7 @@
         </div>
       </div>
     </section>
-
+  -->
     <!-- ***** About ***** -->
 
     <section class="about" id="about">
