--- a/index.html
+++ b/index.html
@@ -170,16 +170,7 @@
                 <li>Docker & Docker Swarm</li>
                 <li>Bases de Kubernetes et KVM</li>
               </ul>
-            <!--
-              <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
-              </div>
-            -->
+
             </div>
             <div class="work__image-box">
               <img src="./images/project-3.png" class="work__image" alt="Project 3" />
@@ -195,8 +186,6 @@
       <div class="row">
         <h2>Expériences</h2>
         <div class="exp__boxes">
-
-          <!-- Each div with the work__box class is a project. -->
 
           <div class="exp__box">
             <div class="exp__text">
@@ -248,25 +237,6 @@
       </div>
     </section>
 
-
-
-    <!-- ***** Clients ***** -->
-<!--
-    <section class="client" id="clients">
-      <div class="row">
-        <h2>Certifications</h2>
-        <div class="client__logos">
-
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
-        </div>
-      </div>
-    </section>
-  -->
   <section class="Exp" id="Exp">
     <div class="row">
       <h2>Certifications</h2>
@@ -298,7 +268,7 @@
 
         <div class="work__box">
           <div class="work__text">
-            <h3>Certifications sécurité, réseaux</h3>
+            <h3>Certifications sécurité & réseaux</h3>
             <ul class="work__list">
               <li><a href="https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url">Fortinet FCA</a> - Fortinet Certified Associate Cybersecurity - 09/2024</li>
               <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">Fortinet FCF</a> - Fortinet Certified Fundamentals Cybersecurity - 09/2024 - </li>
@@ -309,7 +279,7 @@
 
         <div class="work__box">
           <div class="work__text">
-            <h3>Microsoft Applied Skills - Microsoft</h3>
+            <h3>Microsoft Applied Skills</h3>
             <ul class="work__list">
               <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" >Administrer Active Directory Domain Services</a></li>
               <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/AC9AE7FB0C5660D9?sharingId=10F2570FA8049AD5" >Déployer des conteneurs en utilisant Azure Kubernetes Service</a></li>
@@ -325,45 +295,7 @@
 
 
 
-<!--
-    <section class="work" id="work">
-      <div class="work__box">
-        <div class="work__text">
-          <h3>Certification</h3>
-          <ul class="work__list">
-            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/E123B4A68AA3A968?sharingId=10F2570FA8049AD5">SC-100</a> - Cybersecurity Architect Expert - 12/2022</li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/1721301A4A0EA28A?sharingId=10F2570FA8049AD5">AZ-500</a> - Azure Security Engineer Associate - 01/2024</li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/9FF0B8104D9C76EE?sharingId=10F2570FA8049AD5">AZ-700</a> - Azure Network Engineer Associate - 06/2023</li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/8422BEF025FC92A5?sharingId=10F2570FA8049AD5">SC-300</a> - Identity and Access Administrator Associate - 12/2022</li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/24AD45DECDC0AB25?sharingId=10F2570FA8049AD5">AZ-104</a> - Azure Administrator Associate - 06/2023</li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/D0167E8BAD251CEE?sharingId=10F2570FA8049AD5">SC-900</a> - Security, Compliance, and Identity Fundamentals - 06/2022</li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/8B25DFBA2E597C7D?sharingId=10F2570FA8049AD5">AZ-900</a> - Azure Fundamentals - 06/2022 </li>
-            <li><a href="https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url">Fortinet FCA</a> - Fortinet Certified Associate Cybersecurity - 09/2024</li>
-            <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">Fortinet FCF</a> - Fortinet Certified Fundamentals Cybersecurity - 09/2024 - </li>
-            <li><a href="https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url">Aviatrix ACE</a> - Multicloud Network Operations Specialty - 03/2024 </li>
-            <li>ISO 27001:2013 - Lead Auditor - 06/2017 </li>
-          </ul>
-        </div>
-      </div>
-    </section>
 
-    <section class="work" id="work">
-      <div class="work__box">
-        <div class="work__text">
-          <h3>Microsoft Applied Skills</h3>
-          <ul class="work__list">
-            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" >Administrer Active Directory Domain Services</a></li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/AC9AE7FB0C5660D9?sharingId=10F2570FA8049AD5" >Déployer des conteneurs en utilisant Azure Kubernetes Service</a></li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/C6EEB1B907555EEA?sharingId=10F2570FA8049AD5" >Déployer et configurer Azure Monitor</a></li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/64BCD63D74B65FB8?sharingId=10F2570FA8049AD5" >Sécuriser les services et charges de travail Azure avec Microsoft Defender pour le cloud</a></li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3312F7649A055A0D?sharingId=10F2570FA8049AD5" >Sécuriser le stockage pour Azure Files et Stockage Blob Azure</a></li>
-            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/ADA39C346A3E567A?sharingId=10F2570FA8049AD5" >Configurer l’accès sécurisé à vos charges de travail en utilisant des réseaux Azure</a></li>
-          </ul>
-        </div>
-      </div>
-    </section>
-  -->
-    <!-- ***** About ***** -->
 
     <section class="about" id="about">
       <div class="row">
@@ -375,7 +307,7 @@
               Eric BEAULIEU
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="#" class="btn">Mon CV</a>
           </div>
 
           <div class="about__photo-container">
@@ -391,17 +323,8 @@
 
   <section class="contact" id="contact">
     <div class="row">
-      <h2>Get in Touch</h2>
+      <h2>Pour me contacter</h2>
       <div class="contact__info">
-        <p>
-          <!--Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-
-          me is via an email.-->
-        </p>
         <!-- Replace the email with yours -->
         <a href="mailto:eric.beaulieu[-@-]gmail.com" class="btn">eric.beaulieu[-@-]gmail.com</a>
       </div>
@@ -424,11 +347,6 @@
             <img src="./images/github.svg" class="footer__social-image" alt="Github">
           </a>
         </li>
-        <!--<li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
-            <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
-          </a>
-        </li>-->
         <li class="footer__social-link-item">
           <a href=https://www.linkedin.com/in/eric-beaulieu/">
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
