--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <ul class="nav__items">
           <li class="nav__item"><a href="#work" class="nav__link">Compétences</a></li>
           <li class="nav__item"><a href="#Exp" class="nav__link">Expériences</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Certifications</a></li>
+          <li class="nav__item"><a href="#Certif" class="nav__link">Certifications</a></li>
           <li class="nav__item"><a href="#clients" class="nav__link">Publications</a></li>
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
@@ -237,7 +237,7 @@
       </div>
     </section>
 
-  <section class="Exp" id="Exp">
+  <section class="Exp" id="Certif">
     <div class="row">
       <h2>Certifications</h2>
       <div class="exp__boxes">
