--- a/index.html
+++ b/index.html
@@ -44,13 +44,9 @@
           <li class="nav__item"><a href="#work" class="nav__link">Compétences</a></li>
           <li class="nav__item"><a href="#Exp" class="nav__link">Expériences</a></li>
           <li class="nav__item"><a href="#Certif" class="nav__link">Certifications</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Publications</a></li>
-          <li class="nav__item">
-            <a href="#about" class="nav__link">About</a>
-          </li>
-          <li class="nav__item">
-            <a href="#contact" class="nav__link">Contact</a>
-          </li>
+          <li class="nav__item"><a href="#Pub" class="nav__link">Publications</a></li>
+          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -271,7 +267,7 @@
             <h3>Certifications sécurité & réseaux</h3>
             <ul class="work__list">
               <li><a href="https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url">Fortinet FCA</a> - Fortinet Certified Associate Cybersecurity - 09/2024</li>
-              <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">Fortinet FCF</a> - Fortinet Certified Fundamentals Cybersecurity - 09/2024 - </li>
+              <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">Fortinet FCF</a> - Fortinet Certified Fundamentals Cybersecurity - 09/2024</li>
               <li><a href="https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url">Aviatrix ACE</a> - Multicloud Network Operations Specialty - 03/2024 </li>
             </ul>
           </div>
@@ -287,6 +283,44 @@
               <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/64BCD63D74B65FB8?sharingId=10F2570FA8049AD5" >Sécuriser les services et charges de travail Azure avec Microsoft Defender pour le cloud</a></li>
               <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3312F7649A055A0D?sharingId=10F2570FA8049AD5" >Sécuriser le stockage pour Azure Files et Stockage Blob Azure</a></li>
               <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/ADA39C346A3E567A?sharingId=10F2570FA8049AD5" >Configurer l’accès sécurisé à vos charges de travail en utilisant des réseaux Azure</a></li>
+            </ul>
+          </div>
+        </div>
+    </div>
+  </section>
+
+
+
+  <section class="Exp" id="Pub">
+    <div class="row">
+      <h2>Publications</h2>
+      <div class="exp__boxes">
+
+        <div class="exp__box">
+          <div class="exp__text">
+            <h3>Articles de magazine</h3>
+            <ul class="exp__list">
+              <li><a href="https://boutique.ed-diamond.com/completez-votre-collection-d-anciens-numeros/1538-gnulinux-magazine-238.html">GNU/Linux Magazine n°238</a> - 06/2020 - Sécurisation d’un serveur NGINX</li>
+              <li><a href="https://boutique.ed-diamond.com/completez-votre-collection-d-anciens-numeros/1381-misc-102.html">MISC n°102</a> - 03/2019 - L’en-tête HPKP pour sécuriser un peu plus les connexions sur Internet ?</li>
+              <li><a href="https://boutique.ed-diamond.com/completez-votre-collection-d-anciens-numeros/1223-misc-90.html">MISC n°90</a> - 03/2016 - Durcissement des commutateurs HP Comware</li>
+              <li>Hakin9 - 01/2010 - Automatiser l'exploitation de vulnérabilité lors d'un TI</li>
+              <li>Hakin9 - 03/2008 - Visibilité du système d'information</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="work__box">
+          <div class="work__text">
+            <h3>Publications de vulnérabilité</h3>
+            <ul class="work__list">
+              <li>Aerohive HiveManager NG divulguée confidentiellement</li>
+              <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">IBM Domino Web Access - CVE-2007-1941</li>
+              <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2008-3850">Accellion FTA - CVE-2008-3850</li>
+              <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2008-7012">Accellion FTA - CVE-2008-7012</li>
+              <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2008-4646">Websense Reporter CVE-2008-4646</li>
+              <li>TrendMicro InterScan Web Security Virtual Appliance - Bid 41039</li>
+              <li>Commest Reflex English divulguée confidentiellement</li>
+              <li>Applications Lectra divulguées confidentiellement</li>
             </ul>
           </div>
         </div>
@@ -323,7 +357,7 @@
 
   <section class="contact" id="contact">
     <div class="row">
-      <h2>Pour me contacter</h2>
+      <h2>Contact</h2>
       <div class="contact__info">
         <!-- Replace the email with yours -->
         <a href="mailto:eric.beaulieu[-@-]gmail.com" class="btn">eric.beaulieu[-@-]gmail.com</a>
