--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
             <h3>Publications de vulnérabilité</h3>
             <ul class="work__list">
               <li>Aerohive HiveManager NG divulguée confidentiellement</li>
-              <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">IBM Domino Web Access - CVE-2007-1941</li>
-              <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2008-3850">Accellion FTA - CVE-2008-3850</li>
-              <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2008-7012">Accellion FTA - CVE-2008-7012</li>
-              <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2008-4646">Websense Reporter CVE-2008-4646</li>
-              <li>TrendMicro InterScan Web Security Virtual Appliance - Bid 41039</li>
+              <li>IBM Domino Web Access - <a href="https://nvd.nist.gov/vuln/detail/CVE-2007-1941">CVE-2007-1941</a></li>
+              <li>Accellion FTA - <a href="https://nvd.nist.gov/vuln/detail/CVE-2008-3850">CVE-2008-3850</a></li>
+              <li>Accellion FTA - <a href="https://nvd.nist.gov/vuln/detail/CVE-2008-7012">CVE-2008-7012</a></li>
+              <li>Websense Reporter - <a href="https://nvd.nist.gov/vuln/detail/CVE-2008-4646">CVE-2008-4646</a></li>
+              <li>TrendMicro InterScan Web Security Virtual Appliance - <a href="https://vigilance.fr/vulnerabilite/Trend-Micro-InterScan-Web-Security-cinq-vulnerabilites-9726">Bid 41039</a></li>
               <li>Commest Reflex English divulguée confidentiellement</li>
               <li>Applications Lectra divulguées confidentiellement</li>
             </ul>
