--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
             <div class="work__text">
               <h3>Certificats et PKI</h3>
               <ul class="work__list">
-                <li>Deploiement d'Autorité de Certificat interne (Microsoft AD CS)</li>
-                <li>Gestion de certificat issue d'autorité public (Sectigi, DigiCert, GoDaddy ...)</li>
-                <li>Accompagnement des équipes interne pour la génération, l'installation, le debuggage des certificats</li>
+                <li>Déploiement d'une Autorité de Certification interne (Microsoft AD CS)</li>
+                <li>Gestion de certificats issus d'autorités publiques (Sectigo, DigiCert, GoDaddy ...)</li>
+                <li>Accompagnement des équipes internes pour la génération, l'installation, le débogage des certificats</li>
               </ul>
             </div>
           </div>
@@ -192,9 +192,9 @@
               <ul class="exp__list">
                 <li>Concevoir et déployer les infrastructures réseaux pour les salles serveurs et l'infrastructure cloud</li>
                 <li>Déploiement et maintien en condition opérationnelle des éléments réseaux et de sécurité</li>
-                <li>Mise en œuvre, gestion, maintenance, documentation et optimisation des réseaux de communication internes et externe</li>
+                <li>Mise en œuvre, gestion, maintenance, documentation et optimisation des réseaux de communication internes et externes</li>
                 <li>Audit et test d’intrusion interne</li>
-                <li>Gestion des projets technique en relation avec les sous-traitants et prestataires</li>
+                <li>Gestion des projets techniques en relation avec les sous-traitants et prestataires</li>
               </ul>
             </div>
           </div>
