--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li class="nav__item"><a href="#Exp" class="nav__link">Expériences</a></li>
           <li class="nav__item"><a href="#Certif" class="nav__link">Certifications</a></li>
           <li class="nav__item"><a href="#Pub" class="nav__link">Publications</a></li>
-          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+          <!--<li class="nav__item"><a href="#about" class="nav__link">About</a></li>-->
           <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
         </ul>
       </nav>
@@ -330,27 +330,26 @@
 
 
 
-
     <section class="about" id="about">
       <div class="row">
         <h2>About Me</h2>
         <div class="about__content">
-          <div class="about__text">
+          <div class="about__text">-->
             <!-- Replace the below paragraph with info about yourself -->
-            <p>
+<!--            <p>
               Eric BEAULIEU
-            </p>
+            </p>-->
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">Mon CV</a>
+    <!--        <a href="#" class="btn">Mon CV</a>
           </div>
 
-          <div class="about__photo-container">
+          <div class="about__photo-container">-->
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/Eric.jpg" width="300" height="300"alt="" />
+            <!--<img class="about__photo" src="./images/Eric.jpg" width="300" height="300"alt="" />
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
   </main>
 
   <!-- ***** Contact ***** -->
