--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
           <span>BEAULIEU Eric</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p> Ingénieur cybersécurité / réseaux / cloud</p>
+        <p> <H2>Ingénieur cybersécurité / réseaux / cloud</H2></p>
+        eric.beaulieu[-@-]gmail.com
         <a href="#contact" class="btn btn--pink">Me contacter</a>
       </div>
     </div>
@@ -330,7 +331,7 @@
 
 
 
-    <section class="about" id="about">
+   <!-- <section class="about" id="about">
       <div class="row">
         <h2>About Me</h2>
         <div class="about__content">
