--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
           <span>BEAULIEU Eric</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p> <H2>Ingénieur cybersécurité / réseaux / cloud</H2></p>
-        eric.beaulieu[-@-]gmail.com
+        <p> Ingénieur cybersécurité / réseaux / cloud</p>
         <a href="#contact" class="btn btn--pink">Me contacter</a>
       </div>
     </div>
