--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                 <li>Microsoft Azure</li>
                 <li>VM, VNet, Bastion, Storage account, Logic App, App Gateway, API Services, DNS, ...</li>
                 <li>Infrastructure As Code : Terraform, Ansible</li>
+                <li>Gestion de code : git</li>
               </ul>
             </div>
           </div>
