--- a/index.html
+++ b/index.html
@@ -270,6 +270,9 @@
               <li><a href="https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url">Fortinet FCA</a> - Fortinet Certified Associate Cybersecurity - 09/2024</li>
               <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">Fortinet FCF</a> - Fortinet Certified Fundamentals Cybersecurity - 09/2024</li>
               <li><a href="https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url">Aviatrix ACE</a> - Multicloud Network Operations Specialty - 03/2024 </li>
+              <li><a href="https://eu.badgr.com/public/assertions/FSNBCpUSQ7Kx2G1S3SeYaA?identity__email=eric.beaulieu@gmail.com">Altered Security</a> - Introduction to Azure Penetration Testing - 12/2021 </li>
+              <li><a href="https://edu.globalcyberalliance.org/certificates/l7heltjpbc"> Global Cyber Alliance</a>  -	Understanding DMARC - 09/2021</li>
+
             </ul>
           </div>
         </div>
