--- a/index.html
+++ b/index.html
@@ -363,7 +363,8 @@
       <h2>Contact</h2>
       <div class="contact__info">
         <!-- Replace the email with yours -->
-        <a href="mailto:eric.beaulieu[*@*]gmail.com" class="btn">eric.beaulieu[-@-]gmail.com</a>
+        <a href="mailto:eric.beaulieu[-@-]gmail.com" class="btn">eric.beaulieu[-@-]gmail.com</a>
+        
       </div>
     </div>
   </section>
