--- a/index.html
+++ b/index.html
@@ -151,10 +151,12 @@
             <div class="work__text">
               <h3>Technologies Cloud</h3>
               <ul class="work__list">
-                <li>Microsoft Azure</li>
+                <li>Mise en place et gestion d'une architecture Microsoft Azure</li>
+                <li>Mise en place d'authentification unique (SSO) basée sur Entra ID </li>
                 <li>VM, VNet, Bastion, Storage account, Logic App, App Gateway, API Services, DNS, ...</li>
                 <li>Infrastructure As Code : Terraform, Ansible</li>
-                <li>Gestion de code : git</li>
+                <li>Gestion de code : git, gitlab, github</li>
+                <li>CI/CD : Mise en place de github action pour des projets personnels </li>
               </ul>
             </div>
           </div>
