--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <div class="work__text">
               <h3>Réseaux</h3>
               <ul class="work__list">
-                <li>Réseaux LAN / WAN / MPLS / VPN (IPsec & SSL)</li>
-                <li>Switch HP (VLAN, STP, BGP, 802.1q)</li>
-                <li>Wifi Extreme Networks (ex Aerohive)</li>
-                <li>Cisco (base)</li>
+                <li>Réseaux LAN / WAN / MPLS / VPN (IPsec & SSL) / Routage.</li>
+                <li>Switch HP (VLAN, STP, BGP, 802.1q).</li>
+                <li>Wifi Extreme Networks (ex Aerohive).</li>
+                <li>Cisco (base).</li>
               </ul>
             </div>
           </div>
@@ -103,13 +103,13 @@
             <div class="work__text">
               <h3>Services réseaux</h3>
               <ul class="work__list">
-                <li>Serveurs DNS (résolveur / autorité / conditionnel)</li>
-                <li>Serveurs DHCP & NTP</li>
-                <li>Serveurs de messagerie (Postfix, Qmail, IBM Domino...)</li>
-                <li>Serveurs Reverse Proxy (Citrix Netscaler / ADC, Azure Application Gateway, Azure Front Door)</li>
-                <li>Serveurs web (Apache, Nginx, Microsoft IIS...)</li>
-                <li>Serveurs Proxy (Squid, Squiguard, Websense...)</li>
-                <li>Serveurs Active Directory / Certificate Service / Radius</li>
+                <li>Serveurs DNS (résolveur / autorité / conditionnel).</li>
+                <li>Serveurs DHCP & NTP.</li>
+                <li>Serveurs de messagerie (Postfix, Qmail, IBM Domino...).</li>
+                <li>Serveurs Reverse Proxy (Citrix Netscaler / ADC, Azure Application Gateway, Azure Front Door).</li>
+                <li>Serveurs web (Apache, Nginx, Microsoft IIS...).</li>
+                <li>Serveurs Proxy (Squid, Squiguard, Websense...).</li>
+                <li>Serveurs Active Directory / Certificate Service / Radius.</li>
               </ul>
             </div>
           </div>
@@ -118,10 +118,10 @@
             <div class="work__text">
               <h3>Pare-feux - Firewalls</h3>
               <ul class="work__list">
-                <li>CheckPoint</li>
-                <li>Azure Firewalls</li>
-                <li>Linux IPTables, ufw</li>
-                <li>Fortinet (base)</li>
+                <li>CheckPoint.</li>
+                <li>Azure Firewalls.</li>
+                <li>Linux IPTables, ufw.</li>
+                <li>Fortinet (base).</li>
               </ul>
             </div>
           </div>
@@ -130,9 +130,9 @@
             <div class="work__text">
               <h3>Certificats et PKI</h3>
               <ul class="work__list">
-                <li>Déploiement d'une Autorité de Certification interne (Microsoft AD CS)</li>
-                <li>Gestion de certificats issus d'autorités publiques (Sectigo, DigiCert, GoDaddy ...)</li>
-                <li>Accompagnement des équipes internes pour la génération, l'installation, le débogage des certificats</li>
+                <li>Déploiement d'une Autorité de Certification interne (Microsoft AD CS).</li>
+                <li>Gestion de certificats issus d'autorités publiques (Sectigo, DigiCert, GoDaddy ...).</li>
+                <li>Accompagnement des équipes internes pour la génération, l'installation, le débogage des certificats.</li>
               </ul>
             </div>
           </div>
@@ -141,8 +141,8 @@
             <div class="work__text">
               <h3>Sécurité de la messagerie</h3>
               <ul class="work__list">
-                <li>Enregistrement DNS : Dmarc, DKIM, SPF</li>
-                <li>Investigation phishing : analyse d'en tête, analyse statique et dynamique</li>
+                <li>Enregistrement DNS : Dmarc, DKIM, SPF.</li>
+                <li>Investigation phishing : analyse d'en tête, analyse statique et dynamique.</li>
               </ul>
             </div>
           </div>
@@ -151,12 +151,12 @@
             <div class="work__text">
               <h3>Technologies Cloud</h3>
               <ul class="work__list">
-                <li>Mise en place et gestion d'une architecture Microsoft Azure</li>
-                <li>Mise en place d'authentification unique (SSO) basée sur Entra ID </li>
+                <li>Mise en place et gestion d'une architecture Microsoft Azure.</li>
+                <li>Mise en place d'authentification unique (SSO) basée sur Entra ID.</li>
                 <li>VM, VNet, Bastion, Storage account, Logic App, App Gateway, API Services, DNS, ...</li>
-                <li>Infrastructure As Code : Terraform, Ansible</li>
-                <li>Gestion de code : git, gitlab, github</li>
-                <li>CI/CD : Mise en place de github action pour des projets personnels </li>
+                <li>Infrastructure As Code : Terraform, Ansible.</li>
+                <li>Gestion de code : git, gitlab, github.</li>
+                <li>CI/CD : Mise en place de github action pour des projets personnels.</li>
               </ul>
             </div>
           </div>
@@ -165,9 +165,9 @@
             <div class="work__text">
               <h3>Virtualisation et conteneurisation</h3>
               <ul class="work__list">
-                <li>Utilisateur des solutions VMWare ESX, VirtualBox</li>
-                <li>Docker & Docker Swarm</li>
-                <li>Bases de Kubernetes et KVM</li>
+                <li>Utilisateur des solutions VMWare ESX, VirtualBox.</li>
+                <li>Docker & Docker Swarm.</li>
+                <li>Bases de Kubernetes et KVM.</li>
               </ul>
 
             </div>
@@ -188,48 +188,48 @@
 
           <div class="exp__box">
             <div class="exp__text">
-              <h3>Lectra (3000 personnes), Cestas (33) - 34 filiales dans le monde - </h3>
+              <h3>Lectra (3000 personnes), Cestas (33) - 34 filiales dans le monde. </h3>
               <p>
                 <H1>Depuis 2007 - Ingénieur réseau et sécurité</H1>
               </p>
               <ul class="exp__list">
-                <li>Concevoir et déployer les infrastructures réseaux pour les salles serveurs et l'infrastructure cloud</li>
-                <li>Déploiement et maintien en condition opérationnelle des éléments réseaux et de sécurité</li>
-                <li>Mise en œuvre, gestion, maintenance, documentation et optimisation des réseaux de communication internes et externes</li>
-                <li>Audit et test d’intrusion interne</li>
-                <li>Gestion des projets techniques en relation avec les sous-traitants et prestataires</li>
+                <li>Concevoir et déployer les infrastructures réseaux pour les salles serveurs et l'infrastructure cloud.</li>
+                <li>Déploiement et maintien en condition opérationnelle des éléments réseaux et de sécurité.</li>
+                <li>Mise en œuvre, gestion, maintenance, documentation et optimisation des réseaux de communication internes et externes.</li>
+                <li>Audit et test d’intrusion interne.</li>
+                <li>Gestion des projets techniques en relation avec les sous-traitants et prestataires.</li>
               </ul>
             </div>
           </div>
           <div class="work__box">
             <div class="work__text">
-              <h3>Messier-Bugatti groupe SAFRAN (1500 personnes), Vélizy (78)</h3>
+              <h3>Messier-Bugatti groupe SAFRAN (1500 personnes), Vélizy (78).</h3>
               <p>
                 <H1>2003-2007 - Consultant sécurité INTRINsec</H1>
               </p>
               <ul class="work__list">
-                <li>Projet de prise en charge de l'infogérance sécurité – méthodologie ITIL</li>
-                <li>Rédaction de documentation sécurité</li>
-                <li>Veille technologique et sécurité</li>
-                <li>Définition de politiques de sécurité Système (Windows, Novell, Domino, Oracle, antivirus)</li>
-                <li>Déploiement d'outils de supervision</li>
-                <li>Audit et test d’intrusion sécurité</li>
-                <li>Assistance à maîtrise d'ouvrage</li>
+                <li>Projet de prise en charge de l'infogérance sécurité – méthodologie ITIL.</li>
+                <li>Rédaction de documentation sécurité.</li>
+                <li>Veille technologique et sécurité.</li>
+                <li>Définition de politiques de sécurité Système (Windows, Novell, Domino, Oracle, antivirus).</li>
+                <li>Déploiement d'outils de supervision.</li>
+                <li>Audit et test d’intrusion sécurité.</li>
+                <li>Assistance à maîtrise d'ouvrage.</li>
               </ul>
             </div>
           </div>
           <div class="work__box">
             <div class="work__text">
-              <h3>2002 – 2003 - INTRINsec groupe Neurones (1300 personnes), Nanterre (92)</h3>
+              <h3>2002 – 2003 - INTRINsec groupe Neurones (1300 personnes), Nanterre (92).</h3>
               <p>
                 <H1>2002-2003 - Expert sécurité INTRINsec</H1>
               </p>
               <ul class="work__list">
-                <li>Veille technologique et sécurité</li>
-                <li>Audit et déploiement d’architectures sécurisées (serveur de messagerie / pare-feu / Internet / proxy / antivirus)</li>
-                <li>Audit et intégration d'architecture antivirale</li>
-                <li>Infogérance de la sécurité (support et assistance clients)</li>
-                <li>Administration système et réseau</li>
+                <li>Veille technologique et sécurité.</li>
+                <li>Audit et déploiement d’architectures sécurisées (serveur de messagerie / pare-feu / Internet / proxy / antivirus).</li>
+                <li>Audit et intégration d'architecture antivirale.</li>
+                <li>Infogérance de la sécurité (support et assistance clients).</li>
+                <li>Administration système et réseau.</li>
               </ul>
           </div>
         </div>
