--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <h3>Réseaux</h3>
               <ul class="work__list">
                 <li>Réseaux LAN / WAN / MPLS / VPN (IPsec & SSL) / Routage.</li>
-                <li>Switch HP (VLAN, STP, BGP, 802.1q).</li>
+                <li>Switch HP (VLAN, STP, BGP? ...).</li>
                 <li>Wifi Extreme Networks (ex Aerohive).</li>
                 <li>Cisco (base).</li>
               </ul>
@@ -109,7 +109,7 @@
                 <li>Serveurs Reverse Proxy (Citrix Netscaler / ADC, Azure Application Gateway, Azure Front Door).</li>
                 <li>Serveurs web (Apache, Nginx, Microsoft IIS...).</li>
                 <li>Serveurs Proxy (Squid, Squiguard, Websense...).</li>
-                <li>Serveurs Active Directory / Certificate Service / Radius.</li>
+                <li>Serveurs Active Directory / Certificate Service / NPS Radius.</li>
               </ul>
             </div>
           </div>
@@ -128,11 +128,21 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Certificats et PKI</h3>
+              <h3>Antivirus et EDR</h3>
+              <ul class="work__list">
+                <li>Administration et intégration de solution McAfee, Symentec et TrendMicro</li>
+                <li>EDR SentinelOne</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Certificats x509 et PKI</h3>
               <ul class="work__list">
                 <li>Déploiement d'une Autorité de Certification interne (Microsoft AD CS).</li>
                 <li>Gestion de certificats issus d'autorités publiques (Sectigo, DigiCert, GoDaddy ...).</li>
-                <li>Accompagnement des équipes internes pour la génération, l'installation, le débogage des certificats.</li>
+                <li>Accompagnement des équipes internes pour la génération, l'installation, le débogage des certificats et des connexions TLS.</li>
               </ul>
             </div>
           </div>
@@ -153,10 +163,9 @@
               <ul class="work__list">
                 <li>Mise en place et gestion d'une architecture Microsoft Azure.</li>
                 <li>Mise en place d'authentification unique (SSO) basée sur Entra ID.</li>
-                <li>VM, VNet, Bastion, Storage account, Logic App, App Gateway, API Services, DNS, ...</li>
+                <li>VM, VNet, NSG, Bastion, Azure Firewall, Storage account, Logic App, App Gateway, API Services, DNS, ...</li>
                 <li>Infrastructure As Code : Terraform, Ansible.</li>
-                <li>Gestion de code : git, gitlab, github.</li>
-                <li>CI/CD : Mise en place de github action pour des projets personnels.</li>
+                <li>Gestion de code & CI/CD: Git, GitLab, GitHub, GitHub Pages, GitHub Actions.</li>
               </ul>
             </div>
           </div>
@@ -213,7 +222,7 @@
                 <li>Veille technologique et sécurité.</li>
                 <li>Définition de politiques de sécurité Système (Windows, Novell, Domino, Oracle, antivirus).</li>
                 <li>Déploiement d'outils de supervision.</li>
-                <li>Audit et test d’intrusion sécurité.</li>
+                <li>Audit de sécurité et test d’intrusion.</li>
                 <li>Assistance à maîtrise d'ouvrage.</li>
               </ul>
             </div>
