--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             <div class="work__text">
               <h3>Antivirus et EDR</h3>
               <ul class="work__list">
-                <li>Administration et intégration de solution McAfee, Symentec et TrendMicro</li>
-                <li>EDR SentinelOne</li>
+                <li>Administration et intégration de solution McAfee, Symentec et TrendMicro.</li>
+                <li>EDR SentinelOne.</li>
               </ul>
             </div>
           </div>
