Add GHAS certification

--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
           <div class="work__text">
             <h3>Certifications sécurité & réseaux</h3>
             <ul class="work__list">
+              <li><a href="https://www.credly.com/badges/42459b3a-3c68-42a9-bfb2-6de55b7d6bb4/public_url">GHAS</a> - GitHub Advanced Security- 06/2025 </li>
               <li><a href="https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url">Fortinet FCA</a> - Fortinet Certified Associate Cybersecurity - 09/2024</li>
               <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">Fortinet FCF</a> - Fortinet Certified Fundamentals Cybersecurity - 09/2024</li>
               <li><a href="https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url">Aviatrix ACE</a> - Multicloud Network Operations Specialty - 03/2024 </li>
